srcs/tester/base/map/operator[]/log.txt
In file included from ./base/map/operator[]/patched.cpp:3:
../map.hpp:556:35: error: call to 'make_pair' is ambiguous
        { return (*((this->insert(make_pair<key_type, mapped_type>(k,mapped_type()))).first)).second; }
                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./base/map/operator[]/patched.cpp:10:8: note: in instantiation of member function 'ft::map<char, std::__cxx11::basic_string<char>, ft::less<char>, std::allocator<ft::pair<const char, std::__cxx11::basic_string<char> > > >::operator[]' requested here
  mymap['a']="an element";
       ^
/usr/bin/../lib/gcc/x86_64-linux-gnu/9/../../../../include/c++/9/bits/stl_pair.h:534:5: note: candidate function [with _T1 = char, _T2 = std::__cxx11::basic_string<char>]
    make_pair(_T1 __x, _T2 __y)
    ^
../Utils.hpp:123:15: note: candidate function [with T1 = char, T2 = std::__cxx11::basic_string<char>]
  pair<T1,T2> make_pair (T1 x, T2 y) {
              ^
1 error generated.
